--- a/assets/css/now-ui-kit.css
+++ b/assets/css/now-ui-kit.css
@@ -5604,6 +5604,7 @@ img {
 
 .index-page .page-header {
   height: 125vh;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .index-page .page-header .container>.content-center {
